(fix): added overflow control for app, moved global styling to App.styl

--- a/src/client/routes/root/containers/ShowsPanel.styl
+++ b/src/client/routes/root/containers/ShowsPanel.styl
@@ -1,5 +1,2 @@
 .root {
-    font-size: responsive 10px 18px;
-    margin-left: 2em;
-    font-family: 'Lato', Calibri, Arial, sans-serif
 } // root
